--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./assets/icon.99017924.svg" />
+    <link rel="icon" type="image/svg+xml" href="assets/icon.99017924.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&family=Inter:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="description" content="Meu Portfólio" />
-    <meta name="keywords" content="Javascript" />
-    <script type="module" crossorigin src="./assets/index.a3118b20.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <meta name="description" content="Meu Portfólio">
+    <meta name="keywords" content="Javascript">
+    <script type="module" crossorigin src="assets/index.5bc0419b.js"></script>
   </head>
   <body>
     <div id="root"></div>
+    
   </body>
 </html>
